<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/scrollView1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TextView android:id="@+id/survNameText"
        android:text="@string/surv_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView android:id="@+id/survLocText"
        android:text="@string/surv_loc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView android:id="@+id/survObsText"
        android:text="@string/surv_obs"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView android:id="@+id/survCommText"
        android:text="@string/surv_comm"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView android:id="@+id/survDateText"
        android:text="@string/surv_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button android:text="@string/survey_objects"
        android:id="@+id/surveyObjBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp">
    </Button>

    <Button android:text="@string/sightings"
        android:id="@+id/sightingBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp">
    </Button>

    <Button android:text="@string/record"
        android:id="@+id/recSightingBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp">
    </Button>

    <Button android:text="@string/upload"
        android:id="@+id/uploadBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp" >
    </Button>

    <Button android:text="@string/change_survey"
        android:id="@+id/surveyBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp" >
    </Button>

</TableLayout>

</ScrollView>
