<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/scrollView1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView android:text="@string/survey_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/survey_text_size">
    </TextView>

    <Spinner
        android:id="@+id/outingSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:prompt="@string/choose_survey"/>

    <TextView android:text="@string/new_survey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/survey_text_size">
    </TextView>

    <TextView android:layout_gravity="start"
        android:text="@string/surv_loc"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="15sp"  >
    </TextView>
    <EditText android:inputType="text"
        android:text=""
        android:textColor="#000000"
        android:id="@+id/survLocBox"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_width="fill_parent"
        android:layout_marginTop="15sp" >
    </EditText>

    <TextView android:layout_gravity="start"
        android:text="@string/surv_obs"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="15sp" >
    </TextView>
    <EditText android:inputType="text"
        android:text=""
        android:textColor="#000000"
        android:id="@+id/survObsBox"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_width="fill_parent"
        android:layout_marginTop="15sp" >
    </EditText>

    <TextView android:layout_gravity="start"
        android:text="@string/surv_comm"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="15sp" >
    </TextView>
    <EditText android:inputType="text"
        android:text=""
        android:textColor="#000000"
        android:id="@+id/survCommBox"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="@android:drawable/editbox_background"
        android:layout_marginTop="15sp" >
    </EditText>

    <Button android:text="@string/begin_survey"
        android:id="@+id/survBeginBtn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_gravity="center_horizontal">
    </Button>

</LinearLayout>

</ScrollView>
